--- a/shelter/src/style/style.css
+++ b/shelter/src/style/style.css
@@ -1,3 +1,108 @@
+:root {    
+    /* Light */
+    --color-light-xl: #FFFFFF;
+    --color-light-l: #F6F6F6;
+    --color-light-s: #FAFAFA;
+
+    /* Dark */
+    --color-dark-s: #CDCDCD;
+    --color-dark-m: #B2B2B2;
+    --color-dark-l: #545454;
+    --color-dark-xl: #4C4C4C;
+    --color-dark-2xl: #444444;
+    --color-dark-3xl: #292929;
+
+    /* Primary */
+    --color-primary: #F1CDB3;
+    --color-primary-light: #FDDCC4;
+}
+
 body {
-    
+     background-color: var(--color-dark-xl);
+}
+
+.wrapper {
+    width: 1280px;
+    margin: 0 auto;
+    padding: 80px 40px 100px;
+}
+
+
+.wrapper-header {
+    padding: 30px 40px;
+}
+
+.header-main {
+    width: 100%;
+    position: sticky;
+}
+
+.header-content {    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 60px;
+    z-index: 1000;
+}
+
+.logo-title {
+    color: var(--color-primary);
+    font-family: 'Georgia', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 10px;
+}
+
+.logo-subtitle {
+    color: var(--color-light-xl);
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 15px;
+    letter-spacing: 0.1em;
+}
+
+.nav-main > ul{
+    display: flex;
+}
+
+.link {
+    color: var(--color-dark-s);
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 160%;
+    margin-left: 35px;
+}
+
+.link_active {
+    color: var(--color-light-s);
+    border-bottom: var(--color-primary) solid 3px;
+}
+
+
+.hero-banner-text {
+    width: 460px;
+}
+.hero-banner-text > h1 {
+    color: var(--color-light-xl);
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 44px;
+    line-height: 130%;
+    margin: 42px 0;
+}
+.hero-banner-text > p {
+    color: var(--color-dark-s);
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 160%;
 }
