--- a/shelter/src/style/style.css
+++ b/shelter/src/style/style.css
@@ -1,108 +1,137 @@
-:root {    
-    /* Light */
-    --color-light-xl: #FFFFFF;
-    --color-light-l: #F6F6F6;
-    --color-light-s: #FAFAFA;
-
-    /* Dark */
-    --color-dark-s: #CDCDCD;
-    --color-dark-m: #B2B2B2;
-    --color-dark-l: #545454;
-    --color-dark-xl: #4C4C4C;
-    --color-dark-2xl: #444444;
-    --color-dark-3xl: #292929;
-
-    /* Primary */
-    --color-primary: #F1CDB3;
-    --color-primary-light: #FDDCC4;
+@import "normalize.css";
+:root {
+  /* Light */
+  --color-light-xl: #FFFFFF;
+  --color-light-l: #F6F6F6;
+  --color-light-s: #FAFAFA;
+  /* Dark */
+  --color-dark-s: #CDCDCD;
+  --color-dark-m: #B2B2B2;
+  --color-dark-l: #545454;
+  --color-dark-xl: #4C4C4C;
+  --color-dark-2xl: #444444;
+  --color-dark-3xl: #292929;
+  /* Primary */
+  --color-primary: #F1CDB3;
+  --color-primary-light: #FDDCC4;
 }
 
 body {
-     background-color: var(--color-dark-xl);
+  background-color: var(--color-dark-3xl);
 }
 
 .wrapper {
-    width: 1280px;
-    margin: 0 auto;
-    padding: 80px 40px 100px;
+  width: 1280px;
+  margin: 0 auto;
+  padding: 80px 40px 100px;
 }
 
-
-.wrapper-header {
-    padding: 30px 40px;
+.button-rectangle-primary {
+  display: inline-block;
+  padding: 15px 45px;
+  background-color: var(--color-primary);
+  border-radius: 26px;
+  color: var(--color-dark-3xl);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+}
+.button-rectangle-primary:hover {
+  background-color: var(--color-primary-light);
 }
 
 .header-main {
-    width: 100%;
-    position: sticky;
+  width: 100%;
+  position: fixed;
+}
+.header-main .wrapper {
+  padding: 30px 40px;
 }
 
-.header-content {    
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 60px;
-    z-index: 1000;
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  z-index: 1000;
+}
+.header-content .logo .logo-title {
+  color: var(--color-primary);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+}
+.header-content .logo .logo-subtitle {
+  color: var(--color-light-xl);
+  font-family: "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 0.1em;
+  margin-top: 10px;
+}
+.header-content .nav-main > ul {
+  display: flex;
+}
+.header-content .nav-main > ul > li > .link {
+  color: var(--color-dark-s);
+  font-family: "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 160%;
+  margin-left: 35px;
+}
+.header-content .nav-main > ul > li > .link_active {
+  color: var(--color-light-s);
+  border-bottom: var(--color-primary) solid 3px;
 }
 
-.logo-title {
-    color: var(--color-primary);
-    font-family: 'Georgia', serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 110%;
-    letter-spacing: 0.06em;
-    margin-bottom: 10px;
+.hero-banner {
+  background: url("../img/noise_transparent@2x.png"), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
+  height: 100vh;
+}
+.hero-banner .wrapper {
+  padding-top: 180px;
+  padding-bottom: 0;
+  height: 100%;
 }
 
-.logo-subtitle {
-    color: var(--color-light-xl);
-    font-family: 'Arial', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 15px;
-    letter-spacing: 0.1em;
+.hero-banner-content {
+  display: flex;
+  align-items: stretch;
+  height: 100%;
 }
-
-.nav-main > ul{
-    display: flex;
+.hero-banner-content .hero-banner-text {
+  align-self: center;
+  width: 460px;
+  margin-bottom: 120px;
 }
-
-.link {
-    color: var(--color-dark-s);
-    font-family: 'Arial', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 160%;
-    margin-left: 35px;
+.hero-banner-content .hero-banner-text h1 {
+  color: var(--color-light-xl);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 44px;
+  line-height: 130%;
 }
-
-.link_active {
-    color: var(--color-light-s);
-    border-bottom: var(--color-primary) solid 3px;
+.hero-banner-content .hero-banner-text p {
+  color: var(--color-dark-s);
+  font-family: "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 160%;
+  margin: 42px 0;
 }
-
-
-.hero-banner-text {
-    width: 460px;
-}
-.hero-banner-text > h1 {
-    color: var(--color-light-xl);
-    font-family: 'Georgia';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 44px;
-    line-height: 130%;
-    margin: 42px 0;
-}
-.hero-banner-text > p {
-    color: var(--color-dark-s);
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 160%;
+.hero-banner-content .hero-banner-img {
+  flex-grow: 1;
+  background: url("../img/start-screen-puppy.png") 100% 100%/contain no-repeat;
 }
