--- a/shelter/src/style/style.css
+++ b/shelter/src/style/style.css
@@ -16,10 +16,6 @@
   --color-primary-light: #FDDCC4;
 }
 
-body {
-  background-color: var(--color-dark-3xl);
-}
-
 .wrapper {
   width: 1280px;
   margin: 0 auto;
@@ -27,8 +23,10 @@ body {
 }
 
 .button-rectangle-primary {
-  display: inline-block;
-  padding: 15px 45px;
+  display: inline-flex;
+  align-items: center;
+  height: 52px;
+  padding: 0 45px;
   background-color: var(--color-primary);
   border-radius: 26px;
   color: var(--color-dark-3xl);
@@ -41,6 +39,101 @@ body {
 }
 .button-rectangle-primary:hover {
   background-color: var(--color-primary-light);
+}
+
+.button-rectangle-secondary {
+  display: inline-flex;
+  align-items: center;
+  height: 52px;
+  padding: 0 43px;
+  border: var(--color-primary) 2px solid;
+  border-radius: 26px;
+  color: var(--color-dark-3xl);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+}
+.button-rectangle-secondary:hover {
+  background-color: var(--color-primary-light);
+  border: var(--color-primary-light) 2px solid;
+}
+
+.button-round {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 52px;
+  width: 52px;
+  border: var(--color-primary) 2px solid;
+  border-radius: 50%;
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: var(--color-dark-3xl);
+}
+.button-round:hover {
+  background-color: var(--color-primary-light);
+  border: var(--color-primary-light) 2px solid;
+}
+
+.link {
+  color: var(--color-dark-s);
+  font-family: "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 160%;
+  margin-left: 35px;
+}
+.link:hover {
+  color: var(--color-light-s);
+}
+
+.link_active {
+  color: var(--color-light-s);
+  border-bottom: var(--color-primary) solid 3px;
+}
+.link_active:hover {
+  color: var(--color-light-s);
+  border-bottom: none;
+}
+
+.card-mini {
+  background-color: var(--color-light-s);
+  border-radius: 9px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 30px;
+}
+.card-mini img {
+  width: 270px;
+  height: 270px;
+}
+.card-mini h4 {
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  text-align: center;
+  margin: 30px 0;
+}
+.card-mini:hover {
+  background-color: var(--color-light-xl);
+}
+.card-mini:hover .button-rectangle-secondary {
+  background-color: var(--color-primary-light);
+  border: var(--color-primary-light) 2px solid;
 }
 
 .header-main {
@@ -80,23 +173,11 @@ body {
 .header-content .nav-main > ul {
   display: flex;
 }
-.header-content .nav-main > ul > li > .link {
-  color: var(--color-dark-s);
-  font-family: "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 160%;
-  margin-left: 35px;
-}
-.header-content .nav-main > ul > li > .link_active {
-  color: var(--color-light-s);
-  border-bottom: var(--color-primary) solid 3px;
-}
 
 .hero-banner {
   background: url("../img/noise_transparent@2x.png"), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
   height: 100vh;
+  width: 100%;
 }
 .hero-banner .wrapper {
   padding-top: 180px;
@@ -134,4 +215,236 @@ body {
 .hero-banner-content .hero-banner-img {
   flex-grow: 1;
   background: url("../img/start-screen-puppy.png") 100% 100%/contain no-repeat;
+}
+
+.about {
+  background-color: var(--color-light-xl);
+  width: 100%;
+}
+
+.about-content {
+  display: flex;
+  justify-content: center;
+}
+.about-content .about-text {
+  width: 430px;
+  margin-left: 120px;
+}
+.about-content .about-text h3 {
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+}
+.about-content .about-text p {
+  color: var(--color-dark-2xl);
+  font-family: "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 160%;
+  margin-top: 25px;
+}
+.about-content .about-img {
+  width: 300px;
+  background: url("../img/about-pets.png") 100% 100%/contain no-repeat;
+}
+
+.ourFriends {
+  background-color: var(--color-light-l);
+}
+
+.ourFriends-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.ourFriends-content h3 {
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+.ourFriends-content .carousel-wrapper {
+  margin: 60px 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+.ourFriends-content .carousel-wrapper .button-round {
+  flex-shrink: 0;
+}
+.ourFriends-content .carousel-wrapper .carousel-items-conteiner {
+  display: flex;
+  overflow: hidden;
+  padding: 0 53px;
+}
+.ourFriends-content .carousel-wrapper .carousel-items-conteiner .card-mini {
+  flex-shrink: 0;
+  margin: 0 45px;
+}
+.ourFriends-content .carousel-wrapper .carousel-items-conteiner .card-mini:first-child {
+  margin-left: 0;
+}
+
+.help {
+  width: 100%;
+  background-color: var(--color-light-xl);
+}
+
+.help-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.help-content h3 {
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+.help-content .help-items-conteiner {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 0 87px;
+}
+.help-content .help-items-conteiner .help-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 55px 40px 0;
+}
+.help-content .help-items-conteiner .help-item p {
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.donation {
+  width: 100%;
+  background-color: var(--color-light-l);
+}
+
+.donation-content {
+  display: flex;
+  justify-content: center;
+}
+.donation-content .donation-text {
+  width: 380px;
+  margin-left: 30px;
+}
+.donation-content .donation-text h3 {
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+}
+.donation-content .donation-text h5 {
+  margin-top: 20px;
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+}
+.donation-content .donation-text .credit-card {
+  margin-top: 20px;
+  border-radius: 9px;
+  padding: 10px 15px;
+  display: inline-flex;
+  align-items: center;
+  background-color: var(--color-primary);
+}
+.donation-content .donation-text .credit-card p {
+  margin-left: 15px;
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: var(--color-dark-l);
+}
+.donation-content .donation-text > p {
+  color: var(--color-dark-m);
+  font-family: "Arial", sans-serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  margin-top: 20px;
+}
+.donation-content .donation-img {
+  width: 505px;
+  background: url("../img/donation-dog.png") 100% 100%/contain no-repeat;
+}
+
+footer {
+  width: 100%;
+  background: url("../img/noise_transparent@2x.png"), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+}
+footer .wrapper {
+  padding-bottom: 0;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+.footer-content .footer-info {
+  margin: 16px 0 60px;
+}
+.footer-content .footer-info h3 {
+  color: var(--color-light-xl);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+}
+.footer-content .footer-info .icon-text {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+}
+.footer-content .footer-info .icon-text p {
+  margin-left: 20px;
+  color: var(--color-primary);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+}
+.footer-content .footer-img {
+  flex-basis: 300px;
+  background: url("../img/footer-puppy.png") 100% 100%/contain no-repeat;
 }
