--- a/shelter/src/style/style.css
+++ b/shelter/src/style/style.css
@@ -425,6 +425,10 @@ legend {
   --color-primary-light: #FDDCC4;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .wrapper {
   width: 1280px;
   margin: 0 auto;
@@ -446,6 +450,7 @@ legend {
   line-height: 130%;
   letter-spacing: 0.06em;
   cursor: pointer;
+  transition: all 0.5s ease-out;
 }
 .button-rectangle-primary:hover {
   background-color: var(--color-primary-light);
@@ -466,6 +471,7 @@ legend {
   line-height: 130%;
   letter-spacing: 0.06em;
   cursor: pointer;
+  transition: all 0.5s ease-out;
 }
 .button-rectangle-secondary:hover {
   background-color: var(--color-primary-light);
@@ -488,6 +494,7 @@ legend {
   letter-spacing: 0.06em;
   color: var(--color-dark-3xl);
   cursor: pointer;
+  transition: all 0.5s ease-out;
 }
 .button-round p {
   margin-bottom: 2px;
@@ -518,6 +525,7 @@ legend {
   font-size: 15px;
   line-height: 160%;
   margin-left: 35px;
+  transition: all 0.3s ease-out;
 }
 .link:hover {
   color: var(--color-light-s);
@@ -525,9 +533,7 @@ legend {
 .link_active {
   color: var(--color-light-s);
   border-bottom: var(--color-primary) solid 3px;
-}
-.link_active:hover {
-  border-bottom: none;
+  cursor: default;
 }
 .link-onlight {
   color: var(--color-dark-l);
@@ -537,9 +543,10 @@ legend {
 }
 .link-onlight_active {
   border-bottom: var(--color-primary) solid 3px;
+  cursor: default;
 }
 .link-onlight_active:hover {
-  border-bottom: none;
+  color: var(--color-dark-l);
 }
 
 .card-mini {
@@ -550,6 +557,7 @@ legend {
   flex-direction: column;
   align-items: center;
   padding-bottom: 30px;
+  cursor: pointer;
 }
 .card-mini img {
   width: 270px;
@@ -576,6 +584,7 @@ legend {
 
 .header-main {
   width: 100%;
+  min-width: 1280px;
   position: fixed;
 }
 .header-main .wrapper {
@@ -627,8 +636,9 @@ legend {
 }
 
 footer {
-  width: 100%;
   background: url("../img/noise_transparent@2x.png"), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+  width: 100%;
+  min-width: 1280px;
 }
 footer .wrapper {
   padding-bottom: 0;
@@ -674,6 +684,7 @@ footer .wrapper {
   background: url("../img/noise_transparent@2x.png"), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
   height: 100vh;
   width: 100%;
+  min-width: 1280px;
 }
 .hero-banner .wrapper {
   padding-top: 180px;
@@ -716,6 +727,7 @@ footer .wrapper {
 .about {
   background-color: var(--color-light-xl);
   width: 100%;
+  min-width: 1280px;
 }
 
 .about-content {
@@ -751,6 +763,8 @@ footer .wrapper {
 
 .ourFriends {
   background-color: var(--color-light-l);
+  width: 100%;
+  min-width: 1280px;
 }
 
 .ourFriends-content {
@@ -760,6 +774,16 @@ footer .wrapper {
   width: 100%;
 }
 .ourFriends-content h3 {
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+.ourFriends-content h1 {
   color: var(--color-dark-l);
   font-family: "Georgia", serif;
   font-style: normal;
@@ -809,8 +833,9 @@ footer .wrapper {
 }
 
 .help {
-  width: 100%;
   background-color: var(--color-light-xl);
+  width: 100%;
+  min-width: 1280px;
 }
 
 .help-content {
@@ -854,8 +879,9 @@ footer .wrapper {
 }
 
 .donation {
-  width: 100%;
   background-color: var(--color-light-l);
+  width: 100%;
+  min-width: 1280px;
 }
 
 .donation-content {
