--- a/shelter/src/style/_general.scss
+++ b/shelter/src/style/_general.scss
@@ -23,7 +23,7 @@
     font-family: 'Arial';
     font-style: italic;
     font-weight: 400;
-    src: local('Arial'),
+    src: local('Arial-italic'),
          url('../fonts/arial/arial-italic.ttf') format("ttf");
 }
 
@@ -292,6 +292,7 @@ html {
     & img {
         width: 270px;
         height: 270px;
+        object-fit: cover;
     }
     & h4 {
         color: var(--color-dark-l);
@@ -341,6 +342,7 @@ html {
         color: var(--color-light-xl);
         @include font-logo_subtitle();
         margin-top: 10px ;
+        margin-left: 5px;
         transition: all .5s ease-out;
     }
     .nav-main > ul {
@@ -366,6 +368,7 @@ footer {
     min-width: 1280px;
 
     & .wrapper{
+        padding-top: 40px;
         padding-bottom: 0;
     }
 }
@@ -374,7 +377,7 @@ footer {
     justify-content: space-between;
 
     & .footer-info {
-        margin: 16px 0 60px;
+        margin: 16px 0 0;
 
         & h3 {
             color: var(--color-light-xl);
@@ -384,6 +387,9 @@ footer {
             margin-top: 40px;
             display: flex;
             align-items: center;
+            &_place {
+                margin-top: 32px;
+            }
 
             & p {
                 margin-left: 20px;
@@ -394,6 +400,7 @@ footer {
     }
     & .footer-img {
         flex-basis: 300px;
+        height: 310px;
         background: url('../img/footer-puppy.png') 100% 100%/contain no-repeat;
     }
 
