--- a/shelter/src/style/style.css
+++ b/shelter/src/style/style.css
@@ -430,7 +430,7 @@ legend {
   font-family: "Arial";
   font-style: italic;
   font-weight: 400;
-  src: local("Arial"), url("../fonts/arial/arial-italic.ttf") format("ttf");
+  src: local("Arial-italic"), url("../fonts/arial/arial-italic.ttf") format("ttf");
 }
 :root {
   /* Light */
@@ -586,6 +586,8 @@ html {
 .card-mini img {
   width: 270px;
   height: 270px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .card-mini h4 {
   color: var(--color-dark-l);
@@ -650,6 +652,7 @@ html {
   line-height: 15px;
   letter-spacing: 0.1em;
   margin-top: 10px;
+  margin-left: 5px;
   transition: all 0.5s ease-out;
 }
 .header-content .nav-main > ul {
@@ -668,6 +671,7 @@ footer {
   min-width: 1280px;
 }
 footer .wrapper {
+  padding-top: 40px;
   padding-bottom: 0;
 }
 
@@ -676,7 +680,7 @@ footer .wrapper {
   justify-content: space-between;
 }
 .footer-content .footer-info {
-  margin: 16px 0 60px;
+  margin: 16px 0 0;
 }
 .footer-content .footer-info h3 {
   color: var(--color-light-xl);
@@ -692,6 +696,9 @@ footer .wrapper {
   display: flex;
   align-items: center;
 }
+.footer-content .footer-info .icon-text_place {
+  margin-top: 32px;
+}
 .footer-content .footer-info .icon-text p {
   margin-left: 20px;
   color: var(--color-primary);
@@ -704,6 +711,7 @@ footer .wrapper {
 }
 .footer-content .footer-img {
   flex-basis: 300px;
+  height: 310px;
   background: url("../img/footer-puppy.png") 100% 100%/contain no-repeat;
 }
 
@@ -727,7 +735,7 @@ footer .wrapper {
 .hero-banner-content .hero-banner-text {
   align-self: center;
   width: 460px;
-  margin-bottom: 120px;
+  margin-bottom: 80px;
 }
 .hero-banner-content .hero-banner-text h1 {
   color: var(--color-light-xl);
@@ -760,6 +768,7 @@ footer .wrapper {
 .about-content {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .about-content .about-text {
   width: 430px;
@@ -785,6 +794,7 @@ footer .wrapper {
 }
 .about-content .about-img {
   width: 300px;
+  height: 408px;
   background: url("../img/about-pets.png") 100% 100%/contain no-repeat;
 }
 
@@ -882,7 +892,7 @@ footer .wrapper {
 }
 .help-content .help-items-conteiner {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
   padding: 0 87px;
@@ -891,7 +901,7 @@ footer .wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 55px 40px 0;
+  margin: 57px 0 0;
 }
 .help-content .help-items-conteiner .help-item p {
   color: var(--color-dark-l);
@@ -904,6 +914,13 @@ footer .wrapper {
   text-align: center;
   margin-top: 30px;
 }
+.help-content .help-items-conteiner_line2 {
+  justify-content: space-around;
+  padding: 0 111px;
+}
+.help-content .help-items-conteiner_line2 .help-item {
+  margin: 56px 0 0;
+}
 
 .donation {
   background-color: var(--color-light-l);
@@ -914,6 +931,7 @@ footer .wrapper {
 .donation-content {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .donation-content .donation-text {
   width: 380px;
@@ -967,5 +985,6 @@ footer .wrapper {
 }
 .donation-content .donation-img {
   width: 505px;
+  height: 261px;
   background: url("../img/donation-dog.png") 100% 100%/contain no-repeat;
 }
