--- a/shelter/src/style/style.scss
+++ b/shelter/src/style/style.scss
@@ -24,7 +24,7 @@
     & .hero-banner-text {
         align-self:center;        
         width: 460px;
-        margin-bottom: 120px;
+        margin-bottom: 80px;
 
         & h1 {
             color: var(--color-light-xl);
@@ -52,6 +52,7 @@
 .about-content {
     display: flex;
     justify-content: center;
+    align-items: center;
 
     & .about-text {     
         width: 430px;
@@ -70,6 +71,7 @@
     }
     & .about-img {
         width: 300px;
+        height: 408px;
         background: url('../img/about-pets.png') 100% 100%/contain no-repeat;
     }
 }
@@ -154,7 +156,7 @@
     }
     & .help-items-conteiner{
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         flex-wrap:wrap;
         width: 100%;
         padding: 0 87px;
@@ -162,7 +164,7 @@
             display: flex;
             flex-direction: column;
             align-items: center; 
-            margin: 55px 40px 0;
+            margin: 57px 0 0;
             & p {
                 color: var(--color-dark-l);
                 @include font-h4();
@@ -170,6 +172,13 @@
                 margin-top: 30px;
             }
 
+        }
+        &_line2 {
+            justify-content: space-around;
+            padding: 0 111px;
+            & .help-item {
+                margin: 56px 0 0;    
+            }
         }
     }
     
@@ -183,6 +192,7 @@
 .donation-content {
     display: flex;
     justify-content: center;
+    align-items: center;
 
     & .donation-text {     
         width: 380px;
@@ -220,6 +230,7 @@
     }
     & .donation-img {
         width: 505px;
+        height: 261px;
         background: url('../img/donation-dog.png') 100% 100%/contain no-repeat;
     }
 }
