--- a/shelter/src/style/style.css
+++ b/shelter/src/style/style.css
@@ -460,6 +460,11 @@ html {
   margin: 0 auto;
   padding: 80px 40px 100px;
 }
+@media (max-width: 767px) {
+  .wrapper {
+    padding: 42px 10px;
+  }
+}
 
 .button-rectangle-primary {
   display: inline-flex;
@@ -692,6 +697,11 @@ footer .wrapper {
   line-height: 130%;
   letter-spacing: 0.06em;
 }
+@media (max-width: 767px) {
+  .footer-content .footer-info h3 {
+    font-size: 25px;
+  }
+}
 .footer-content .footer-info .icon-text {
   margin-top: 40px;
   display: flex;
@@ -720,6 +730,21 @@ footer .wrapper {
     flex-wrap: wrap;
     justify-content: space-around;
   }
+  .footer-content .footer-info {
+    margin: 0;
+  }
+}
+@media (max-width: 767px) {
+  .footer-content {
+    row-gap: 40px;
+  }
+  .footer-content .footer-info h3 {
+    text-align: center;
+  }
+  .footer-content .footer-img {
+    flex-basis: 260px;
+    height: 269px;
+  }
 }
 
 .hero-banner {
@@ -734,7 +759,12 @@ footer .wrapper {
 }
 @media (max-width: 960px) {
   .hero-banner {
-    height: auto;
+    height: 1165px;
+  }
+}
+@media (max-width: 767px) {
+  .hero-banner {
+    height: 823px;
   }
 }
 
@@ -759,6 +789,22 @@ footer .wrapper {
   font-size: 44px;
   line-height: 130%;
 }
+@media (max-width: 767px) {
+  .hero-banner-content .hero-banner-text h1 {
+    font-family: "Georgia", serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    text-align: center;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .hero-banner-content .hero-banner-text h1 {
+    font-size: 25px;
+  }
+}
 .hero-banner-content .hero-banner-text p {
   color: var(--color-dark-s);
   font-family: "Arial", sans-serif;
@@ -768,8 +814,13 @@ footer .wrapper {
   line-height: 160%;
   margin: 42px 0;
 }
+@media (max-width: 767px) {
+  .hero-banner-content .hero-banner-text p {
+    text-align: center;
+  }
+}
 .hero-banner-content .hero-banner-text .button-rectangle-primary {
-  align-self: center;
+  align-self: flex-start;
 }
 .hero-banner-content .hero-banner-img {
   flex-grow: 1;
@@ -781,6 +832,9 @@ footer .wrapper {
   }
   .hero-banner-content .hero-banner-text {
     width: 100%;
+  }
+  .hero-banner-content .hero-banner-text .button-rectangle-primary {
+    align-self: center;
   }
   .hero-banner-content .hero-banner-img {
     height: 593px;
@@ -810,6 +864,11 @@ footer .wrapper {
   line-height: 130%;
   letter-spacing: 0.06em;
 }
+@media (max-width: 767px) {
+  .about-content .about-text h3 {
+    font-size: 25px;
+  }
+}
 .about-content .about-text p {
   color: var(--color-dark-2xl);
   font-family: "Arial", sans-serif;
@@ -829,6 +888,26 @@ footer .wrapper {
     flex-direction: column-reverse;
   }
 }
+@media (max-width: 767px) {
+  .about-content {
+    row-gap: 42px;
+  }
+  .about-content .about-text {
+    width: 100%;
+  }
+  .about-content .about-text h3 {
+    text-align: center;
+  }
+  .about-content .about-text p {
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: justify;
+  }
+  .about-content .about-img {
+    width: 260px;
+    height: 354px;
+  }
+}
 
 .ourFriends {
   background-color: var(--color-light-l);
@@ -840,12 +919,19 @@ footer .wrapper {
     padding-right: 30px;
   }
 }
+@media (max-width: 767px) {
+  .ourFriends .wrapper {
+    padding-left: 13px;
+    padding-right: 13px;
+  }
+}
 
 .ourFriends-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  row-gap: 60px;
 }
 .ourFriends-content h3 {
   color: var(--color-dark-l);
@@ -857,18 +943,12 @@ footer .wrapper {
   letter-spacing: 0.06em;
   text-align: center;
 }
-.ourFriends-content h1 {
-  color: var(--color-dark-l);
-  font-family: "Georgia", serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 35px;
-  line-height: 130%;
-  letter-spacing: 0.06em;
-  text-align: center;
+@media (max-width: 767px) {
+  .ourFriends-content h3 {
+    font-size: 25px;
+  }
 }
 .ourFriends-content .carousel-wrapper {
-  margin: 60px 0;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -894,13 +974,44 @@ footer .wrapper {
          column-gap: 40px;
   }
 }
+@media (max-width: 767px) {
+  .ourFriends-content {
+    row-gap: 42px;
+  }
+  .ourFriends-content .carousel-wrapper {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    row-gap: 20px;
+  }
+  .ourFriends-content .carousel-wrapper .button-round {
+    order: 2;
+  }
+  .ourFriends-content .carousel-wrapper .carousel-items-conteiner {
+    order: 1;
+    width: 100%;
+  }
+}
+.ourFriends-content h1 {
+  color: var(--color-dark-l);
+  font-family: "Georgia", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .ourFriends-content h1 {
+    font-size: 25px;
+  }
+}
 .ourFriends-content .grid-conteiner {
   display: grid;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   justify-items: center;
   grid-gap: 30px 40px;
-  margin: 60px 0;
 }
 @media (max-width: 1279px) {
   .ourFriends-content .grid-conteiner {
@@ -914,16 +1025,26 @@ footer .wrapper {
   .ourFriends-content .grid-conteiner {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 435px);
-    margin: 30px 0 10px;
+    height: 1365px;
+  }
+}
+@media (max-width: 590px) {
+  .ourFriends-content .grid-conteiner {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 .ourFriends-content .pagination {
   display: flex;
   align-items: center;
   justify-content: center;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
 }
-.ourFriends-content .pagination .button-round {
-  margin: 0 10px;
+@media (max-width: 590px) {
+  .ourFriends-content .pagination {
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+  }
 }
 
 .help {
@@ -935,6 +1056,7 @@ footer .wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 60px;
 }
 .help-content h3 {
   color: var(--color-dark-l);
@@ -946,13 +1068,18 @@ footer .wrapper {
   letter-spacing: 0.06em;
   text-align: center;
 }
+@media (max-width: 767px) {
+  .help-content h3 {
+    font-size: 25px;
+  }
+}
 .help-content .help-items-conteiner {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 55px 120px;
   width: 100%;
-  padding: 60px 80px 0;
+  padding: 0 80px;
 }
 .help-content .help-items-conteiner .help-item {
   display: flex;
@@ -974,10 +1101,31 @@ footer .wrapper {
   .help-content .help-items-conteiner {
     justify-content: space-around;
     gap: 55px 60px;
-    padding: 60px 0 0;
+    padding: 0;
   }
   .help-content .help-items-conteiner .help-item {
     width: 170px;
+  }
+}
+@media (max-width: 767px) {
+  .help-content {
+    row-gap: 42px;
+  }
+  .help-content .help-items-conteiner {
+    padding: 0 5px;
+    justify-content: space-between;
+    gap: 30px 30px;
+  }
+  .help-content .help-items-conteiner .help-item {
+    width: 130px;
+  }
+  .help-content .help-items-conteiner .help-item p {
+    font-family: "Georgia", serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
   }
 }
 
@@ -1003,6 +1151,11 @@ footer .wrapper {
   font-size: 35px;
   line-height: 130%;
   letter-spacing: 0.06em;
+}
+@media (max-width: 767px) {
+  .donation-content .donation-text h3 {
+    font-size: 25px;
+  }
 }
 .donation-content .donation-text h5 {
   margin-top: 20px;
