--- a/shelter/src/style/style.scss
+++ b/shelter/src/style/style.scss
@@ -16,7 +16,10 @@
     }
     
     @media (max-width: $min-desktop-width) {
-        height: auto;
+        height: 1165px;
+    }
+    @media (max-width: $max-mobile-width) {
+        height: 823px;
     }
 }
 .hero-banner-content {
@@ -35,14 +38,21 @@
         & h1 {
             color: var(--color-light-xl);
             @include font-h2();
+            @media (max-width: $max-mobile-width) {
+                @include font-h3();
+                text-align: center;
+            }
         }
         & p {
             color: var(--color-dark-s);
             @include font-paragraph-l();
             margin: 42px 0;
+            @media (max-width: $max-mobile-width) {
+                text-align: center;
+            }
         }
         & .button-rectangle-primary {
-            align-self: center;
+            align-self: flex-start;
         }
 
     }
@@ -55,6 +65,9 @@
         flex-direction: column;
         & .hero-banner-text {
             width: 100%;
+            & .button-rectangle-primary {
+                align-self: center;
+            }
         }
         & .hero-banner-img {
             height: 593px;
@@ -85,7 +98,6 @@
             @include font-paragraph-l();
             margin-top: 25px;
         }
-
     }
     & .about-img {
         width: 300px;
@@ -95,6 +107,25 @@
 
     @media (max-width: $min-desktop-width) {
         flex-direction: column-reverse;
+    }
+    @media (max-width: $max-mobile-width) {
+        row-gap: 42px;        
+        & .about-text {     
+            width: 100%;
+    
+            & h3 {
+                text-align: center;
+            }
+            & p {
+                margin-left: 15px;
+                margin-right: 15px;
+                text-align: justify;
+            }
+        }
+        & .about-img {
+            width: 260px;
+            height: 354px;
+        }
     }
 }
 
@@ -106,6 +137,10 @@
             padding-left: 30px;
             padding-right: 30px;
         }
+        @media (max-width: $max-mobile-width) {
+            padding-left: 13px;
+            padding-right: 13px;
+        }
     }
 }
 .ourFriends-content {
@@ -113,18 +148,13 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    row-gap: 60px;
     & h3 {
         color: var(--color-dark-l);
         @include font-h3();
         text-align: center;
-    }
-    & h1 {
-        color: var(--color-dark-l);
-        @include font-h3();
-        text-align: center;
-    }
+    }    
     & .carousel-wrapper {
-        margin: 60px 0;
         display: flex;
         justify-content: space-between;
         width: 100%;
@@ -146,14 +176,40 @@
             }
         }
     }
+    @media (max-width: $max-mobile-width) {
+        row-gap: 42px;
+        & .carousel-wrapper {         
+            flex-wrap: wrap;
+            justify-content: space-around;
+            row-gap: 20px;
+            
+            & .button-round {
+                order: 2;
 
+            }
+            & .carousel-items-conteiner{
+                
+                order: 1;
+                width: 100%;
+
+            }                
+            }
+    }
+
+
+
+
+    & h1 {
+        color: var(--color-dark-l);
+        @include font-h3();
+        text-align: center;
+    }
     & .grid-conteiner {
         display: grid;
         display: grid;
         grid-template-columns: repeat(4,1fr);
         justify-items: center;
         grid-gap: 30px 40px;
-        margin: 60px 0;
         @media (max-width: $max-tablet-width) {
             grid-template-columns: repeat(3,1fr);
             grid-template-rows: repeat(2, 435px);
@@ -163,7 +219,10 @@
         @media (max-width: $min-desktop-width) {
             grid-template-columns: repeat(2,1fr);
             grid-template-rows: repeat(3, 435px);
-            margin: 30px 0 10px;
+            height: 1365px;
+        }
+        @media (max-width: $min-tablet-width) {
+            grid-template-columns: repeat(1,1fr);
         }
 
     }
@@ -172,8 +231,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        & .button-round{
-            margin: 0 10px;
+        column-gap: 20px;
+        @media (max-width: $min-tablet-width) {
+            column-gap: 10px;
         }
     }
 }
@@ -187,6 +247,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    row-gap: 60px;
     & h3 {
         color: var(--color-dark-l);
         @include font-h3();
@@ -198,7 +259,7 @@
         flex-wrap:wrap;
         gap: 55px 120px;
         width: 100%;
-        padding: 60px 80px 0;
+        padding: 0 80px;
         & .help-item {
             display: flex;
             flex-direction: column;
@@ -214,10 +275,24 @@
         @media (max-width: $max-tablet-width) {
             justify-content: space-around;
             gap: 55px 60px;
-            padding: 60px 0 0;
+            padding: 0;
             & .help-item {
                 width: 170px;
             }            
+        }
+    }
+    @media (max-width: $max-mobile-width) {
+        row-gap: 42px;
+        & .help-items-conteiner {
+            padding: 0 5px;
+            justify-content: space-between;
+            gap: 30px 30px;
+            & .help-item {
+                width: 130px;
+                & p {
+                    @include font-h5();
+                }
+            }   
         }
     }    
 }
