--- a/shelter/src/style/style.scss
+++ b/shelter/src/style/style.scss
@@ -197,15 +197,12 @@
     }
 
 
-
-
     & h1 {
         color: var(--color-dark-l);
         @include font-h3();
         text-align: center;
     }
     & .grid-conteiner {
-        display: grid;
         display: grid;
         grid-template-columns: repeat(4,1fr);
         justify-items: center;
@@ -348,6 +345,39 @@
 
     @media (max-width: $min-desktop-width) {
         flex-direction: column-reverse;
+    }
+    @media (max-width: $max-mobile-width) {
+        row-gap: 42px;
+        & .donation-text {     
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+    
+            & h3 {
+                text-align: center;
+            }
+            & h5 {
+                line-height: 160%;
+                letter-spacing: 0;
+                text-align: center;
+            }
+            & .credit-card{    
+                & p {
+                    @include font-h5();
+                }
+            }
+            & > p {
+                text-align: justify;
+                margin: 20px 10px 0;
+            }
+    
+        }
+        & .donation-img {
+            width: calc(100vw - 60px);
+            height: calc(100vw * 135 / 320);
+            background-position: center;
+        }
     }
 }
 
